# raytracer

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  conanfile.txt  meson.build
src/: camera.cc  camera.hh  color.cc  color.hh  common.hh  dielectric.cc  dielectric.hh  hit_record.cc  hit_record.hh  hittable.cc  hittable.hh  hittable_list.cc  hittable_list.hh  lambertian.cc  lambertian.hh  main.cc  material.cc  material.hh  math.cc  math.hh  metal.cc  metal.hh  ray.cc  ray.hh  render.hh  sphere.cc  sphere.hh
utils/: gen
